# Plagiat-NLP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notebook.ipynb  output.txt  plagiatN.cpp  points_imporvment.md  report.py  server.cpp  test.txt  test_fr.txt  test_output.txt  testfilereader.cpp  wikipedia.py
Corpus/: Apprentissage automatique.fr  Apprentissage profond.fr  B.cpp  Deep learning.en  Fibbonaci.py  France.fr  Intelligence artificielle.fr  Perceptron multicouche.fr  Science des donnees.fr  The renaissance.en  Traitement automatique des langues.fr  Tunisie.fr
Corpus/CPP/: A.cpp  C.cpp
Corpus/EN/: Artificial intelligence.txt  Data science.txt  Machine learning.txt  Natural language processing.txt
Corpus/FR/: Intelligence artificielle.txt  Science des données.txt
Interface Graphique/: index.html  interface.js  styles.css
include/: corpus.hpp  document.hpp  file_reader.hpp  plagiarism_detector.hpp  similarity_analyzer.hpp
src/: corpus.cpp  document.cpp
test_plagiat/: test.cpp  test.py  test.txt  test_fr_plagiat.txt  test_fr_resume.txt
